--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Home Work 06</title>
 </head>
 <body>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>;
 </body>
 </html>
