--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Home Work 06</title>
 </head>
 <body>
+    <img src="fibonacci.jpg" alt="fibonacci">
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
